Adjust hero and gallery layout to stop overflow. Add media query for XL screens.

--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -15,6 +15,11 @@
 
   @media #{$brkpoint-lg} {
     grid-template-columns: 1fr 1fr 1fr;
+    max-width: 90rem;
+  }
+
+  @media #{$brkpoint-xl} {
+    margin-inline: auto;
   }
 }
 
