--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -49,3 +49,4 @@ $pad-in__L: 10.25rem;
 // Breakpoints
 $brkpoint-md: '(min-width: 48rem)';
 $brkpoint-lg: '(min-width: 79.6875rem)';
+$brkpoint-xl: '(min-width: 90rem)';
